--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,17 +1,29 @@
+# Supabase
 SUPABASE_URL=
 SUPABASE_ANON_KEY=
+# Optional (for backend/scripts/get_token.py)
+TEST_EMAIL=
+TEST_PASSWORD=
 
-# LLM_PROVIDER: ollama | openai
+# LLM_PROVIDER: openai | groq | ollama | mock
 LLM_PROVIDER=openai
 
-OPENAI_API_KEY=YOUR_KEY_HERE
+# OpenAI
+OPENAI_API_KEY=
 OPENAI_MODEL=gpt-4o-mini
 # Optional (leave blank unless you’re using a gateway)
 OPENAI_BASE_URL=
 
+# Groq (OpenAI-compatible)
+GROQ_API_KEY=
+GROQ_MODEL=llama-3.1-8b-instant
+GROQ_BASE_URL=https://api.groq.com/openai/v1
+
+# Ollama (local)
 OLLAMA_BASE_URL=http://localhost:11434
 OLLAMA_MODEL=llama3.1:latest
 
+# LLM tuning
 LLM_TIMEOUT_SECONDS=30
 LLM_MAX_TOKENS=600
 LLM_TEMPERATURE=0.1
