--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,11 +1,8 @@
 # Supabase
 SUPABASE_URL=
 SUPABASE_ANON_KEY=
-# Optional (for backend/scripts/get_token.py)
-TEST_EMAIL=
-TEST_PASSWORD=
 
-# LLM_PROVIDER: openai | groq | ollama | mock
+# LLM_PROVIDER
 LLM_PROVIDER=openai
 
 # OpenAI
@@ -13,11 +10,6 @@ OPENAI_API_KEY=
 OPENAI_MODEL=gpt-4o-mini
 # Optional (leave blank unless you’re using a gateway)
 OPENAI_BASE_URL=
-
-# Groq (OpenAI-compatible)
-GROQ_API_KEY=
-GROQ_MODEL=llama-3.1-8b-instant
-GROQ_BASE_URL=https://api.groq.com/openai/v1
 
 # Ollama (local)
 OLLAMA_BASE_URL=http://localhost:11434
